--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@
 atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
+com_crashlytics_export_strings.xmlàà)
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
